--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <link rel="shortcut icon" href="/images/favicon.png"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" 
     content="We are a software development company based out of India, that offers custom application development, web application development & mobile app development for all industries. We also have a ready solution for the facility management industry."/>
-    <!-- <title>Techrender- Custom Application Development | Software Development Services</title> -->
-    <title>Techrender</title>
+    <title>Techrender- Custom Application Development | Software Development Services</title>
+    <!-- <title>Techrender</title> -->
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;700&display=swap">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
